# kuk.ai

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-05-impl-capture-and-dim-check.md
docs/superpowers/specs/: 2026-06-05-impl-capture-and-dim-check.md
plans/: p-pairs-new-sorted-orbit.md
skills/kuk-compare/: SKILL.md
skills/kuk-compare/scripts/: figma-fetch.sh
skills/peep-compare/: SKILL.md
src/: cli.rs  compare.rs  error.rs  main.rs  overlay.rs  report.rs
tests/: cli.rs
