[package]
name = "kuk-ai"
version = "0.3.1"
edition = "2024"
authors = ["Adrián Leštinský <lestinsky.adrian@gmail.com>"]
description = "CLI tool to compare two webpage screenshots and produce a similarity score with a red-overlay diff image."
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/lesad/kuk.ai"
homepage = "https://github.com/lesad/kuk.ai"
keywords = ["screenshot", "diff", "visual-regression", "figma", "design"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "kuk"
path = "src/main.rs"

[dependencies]
image = "0.25"
image-compare = "0.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toon-format = "0.5.0"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
